// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileBrowserService Search file in all directories: value 1`] = `
{
  "acl": [],
  "chunks": [],
  "path": {
    "data": [
      95,
      95,
      102,
      105,
      120,
      116,
      117,
      114,
      101,
      115,
      95,
      95,
    ],
    "type": "Buffer",
  },
  "stats": Any<Object>,
  "symlink": undefined,
  "xattr": {},
}
`;

exports[`FileBrowserService Search file in all directories: value 2`] = `
{
  "acl": [],
  "chunks": [],
  "path": {
    "data": [
      95,
      95,
      102,
      105,
      120,
      116,
      117,
      114,
      101,
      115,
      95,
      95,
      47,
      116,
      101,
      115,
      116,
      45,
      115,
      121,
      109,
      108,
      105,
      110,
      107,
    ],
    "type": "Buffer",
  },
  "stats": Any<Object>,
  "symlink": {
    "data": [
      46,
      46,
      47,
      105,
      110,
      100,
      101,
      120,
      46,
      116,
      115,
    ],
    "type": "Buffer",
  },
  "xattr": {},
}
`;

exports[`FileBrowserService Search file in all directories: value 3`] = `
{
  "acl": [],
  "chunks": [],
  "path": {
    "data": [
      95,
      95,
      115,
      110,
      97,
      112,
      115,
      104,
      111,
      116,
      115,
      95,
      95,
    ],
    "type": "Buffer",
  },
  "stats": Any<Object>,
  "symlink": undefined,
  "xattr": {},
}
`;

exports[`FileBrowserService Search file in all directories: value 4`] = `
{
  "acl": [],
  "chunks": [],
  "path": {
    "data": [
      95,
      95,
      115,
      110,
      97,
      112,
      115,
      104,
      111,
      116,
      115,
      95,
      95,
      47,
      102,
      105,
      108,
      101,
      45,
      98,
      114,
      111,
      119,
      115,
      101,
      114,
      46,
      115,
      101,
      114,
      118,
      105,
      99,
      101,
      46,
      115,
      112,
      101,
      99,
      46,
      116,
      115,
      46,
      115,
      110,
      97,
      112,
    ],
    "type": "Buffer",
  },
  "stats": Any<Object>,
  "symlink": undefined,
  "xattr": {},
}
`;

exports[`FileBrowserService Search file in all directories: value 5`] = `
{
  "acl": [],
  "chunks": [],
  "path": {
    "data": [
      95,
      95,
      115,
      110,
      97,
      112,
      115,
      104,
      111,
      116,
      115,
      95,
      95,
      47,
      102,
      105,
      108,
      101,
      45,
      114,
      101,
      97,
      100,
      101,
      114,
      46,
      115,
      101,
      114,
      118,
      105,
      99,
      101,
      46,
      115,
      112,
      101,
      99,
      46,
      116,
      115,
      46,
      115,
      110,
      97,
      112,
    ],
    "type": "Buffer",
  },
  "stats": Any<Object>,
  "symlink": undefined,
  "xattr": {},
}
`;

exports[`FileBrowserService Search file in all directories: value 6`] = `
{
  "acl": [],
  "chunks": [],
  "path": {
    "data": [
      102,
      105,
      108,
      101,
      45,
      98,
      114,
      111,
      119,
      115,
      101,
      114,
      46,
      115,
      101,
      114,
      118,
      105,
      99,
      101,
      46,
      116,
      115,
    ],
    "type": "Buffer",
  },
  "stats": Any<Object>,
  "symlink": undefined,
  "xattr": {},
}
`;

exports[`FileBrowserService Search file in all directories: value 7`] = `
{
  "acl": [],
  "chunks": [],
  "path": {
    "data": [
      102,
      105,
      108,
      101,
      45,
      114,
      101,
      97,
      100,
      101,
      114,
      46,
      115,
      101,
      114,
      118,
      105,
      99,
      101,
      46,
      116,
      115,
    ],
    "type": "Buffer",
  },
  "stats": Any<Object>,
  "symlink": undefined,
  "xattr": {},
}
`;

exports[`FileBrowserService Search file in all directories: value 8`] = `
{
  "acl": [],
  "chunks": [],
  "path": {
    "data": [
      104,
      97,
      115,
      104,
      45,
      114,
      101,
      97,
      100,
      101,
      114,
      46,
      116,
      114,
      97,
      110,
      115,
      102,
      111,
      114,
      109,
      46,
      116,
      115,
    ],
    "type": "Buffer",
  },
  "stats": Any<Object>,
  "symlink": undefined,
  "xattr": {},
}
`;

exports[`FileBrowserService Search file in all directories: value 9`] = `
{
  "acl": [],
  "chunks": [],
  "path": {
    "data": [
      105,
      110,
      100,
      101,
      120,
      46,
      116,
      115,
    ],
    "type": "Buffer",
  },
  "stats": Any<Object>,
  "symlink": undefined,
  "xattr": {},
}
`;
